--- a/clientes.html
+++ b/clientes.html
@@ -10,7 +10,7 @@
     <p>
         Esta es la pagina de clientes
     </p>
-    <p>Cambios de prueba</p>
+    <p>Cambios</p>
     
 </body>
 </html>
